@@ -1,8 +1,9 @@
 Version 0.10.1
 
  User-visible changes:
+ * New --targets command-line option for some commands.
  * conflicts now create conflict-markers in files, and 3 fulltext backups.
- * New --targets command line option for some commands.
+ * new 'svn resolve' command removes conflicted state (by removing backups)
   
  Developer-visible changes:
  * no more dependency on 'patch'; only on GNU diff3 and some version of 'diff'
